--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IonosHub - De Datos a Resultados | Business Intelligence y Automatización</title>
-    <meta name="description" content="Especialistas en Business Intelligence con IA, automatización de WhatsApp, marketing digital y transformación digital en Ecuador. Optimiza tu negocio con datos accionables." />
+    <title>
+      IonosHub - De Datos a Resultados | Business Intelligence y Automatización
+    </title>
+    <meta
+      name="description"
+      content="Especialistas en Business Intelligence con IA, automatización de WhatsApp, marketing digital y transformación digital en Ecuador. Optimiza tu negocio con datos accionables."
+    />
     <meta name="author" content="IonosHub Ecuador" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Monda:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Favicon -->
+    <link rel="icon" href="/imgs/icon/icon.png" />
 
     <meta property="og:title" content="IonosHub - De Datos a Resultados" />
-    <meta property="og:description" content="Transformación digital con IA, Business Intelligence y automatización para empresas en Ecuador" />
+    <meta
+      property="og:description"
+      content="Transformación digital con IA, Business Intelligence y automatización para empresas en Ecuador"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/imgs/icon/logo_ligth.png" />
   </head>
 
   <body>
