--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <!-- Favicon -->
-    <link rel="icon" href="/imgs/icon/icon.png" />
+    <link rel="icon" href="/imgs/icon.png" />
 
     <meta property="og:title" content="IonosHub - De Datos a Resultados" />
     <meta
