--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       content="Transformación digital con IA, Business Intelligence y automatización para empresas en Ecuador"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/imgs/icon/logo_ligth.png" />
+    <meta property="og:image" content="/imgs/icon.png" />
   </head>
 
   <body>
