--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta property="og:image" content="/imgs/icon.png" />
   </head>
 
-  <body>
+  <body class="light">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
