feat: Add comprehensive service pages and Quienes Somos section
- Add dedicated pages for all services (AgentesVirtuales, BusinessIntelligence, MarketingDigital, etc.)
- Create professional QuienesSomos component with real team photos
- Implement ROI Calculator with multi-step wizard and validations
- Add Business Intelligence Demo page with interactive dashboards
- Create Marketing Digital sub-pages (Casos de Ã‰xito, Portfolio)
- Replace logo with Home icon in SliderNavbar
- Set dark mode as default theme
- Add ScrollToTop component for better navigation
- Update WhatsApp number across all components
- Enhance all service pages with professional content and realistic metrics

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      IonosHub - De Datos a Resultados | Business Intelligence y Automatización
+      IonosHub
     </title>
     <meta
       name="description"
@@ -30,7 +30,7 @@
     <meta property="og:image" content="/imgs/icon.png" />
   </head>
 
-  <body class="light">
+  <body class="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
