feat: Transformación completa de la página principal con nuevas secciones profesionales
-  Agregadas 7 nuevas secciones profesionales (Testimonios, Proceso, Certificaciones, BlogResources, ContactForm, AdvancedStats, y mejoras al Hero)
-  Implementado navbar mejorado con menú desplegable y navegación completa a todas las secciones
-  Mejorado footer con estructura de 4 columnas y navegación completa organizada
-  Diseño 100% responsivo con animaciones y micro-interacciones profesionales
-  Reorganizada estructura de carpetas de servicios para mejor organización
-  Flujo estratégico optimizado: Hero  Services  Value  Nosotros  Proceso  Certificaciones  Architecture  Testimonios  Blog  Contacto
-  Eliminadas secciones redundantes (AdvancedStats en página principal, CTA duplicado, ThemeToggle)
-  Agregada documentación completa en DEVELOPER_GUIDE.md
-  Todos los IDs de navegación agregados correctamente (proceso, certificaciones, testimonios, blog)
-  Efectos hover mejorados en todos los componentes con translate, scale y animaciones
-  CTAs estratégicos distribuidos en toda la página para maximizar conversión
-  Página de clase mundial lista para producción

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      IonosHub
+      IonosHub - De Datos a Resultados | Business Intelligence y Automatización
     </title>
     <meta
       name="description"
