--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      IonosHub - De Datos a Resultados | Business Intelligence y Automatización
+      IonosHub
     </title>
     <meta
       name="description"
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <!-- Favicon -->
-    <link rel="icon" href="/imgs/icon.png" />
+    <link rel="icon" href="/imgs/index/web.ico" />
 
     <meta property="og:title" content="IonosHub - De Datos a Resultados" />
     <meta
